--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,7 +7,9 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:backgroundDimEnabled">false</item>
-        <item name="android:color">@android:color/white</item>
+        <item name="android:colorPrimary">@android:color/white</item>
         <item name="android:colorAccent">@android:color/white</item>
+        <item name="android:statusBarColor">@color/amberAccent</item>
     </style>
+
 </resources>
