--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -1,5 +1,4 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
              xmlns:Circle="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -15,6 +14,11 @@
             android:elevation="5dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark">
     </Toolbar>
+    <ImageView
+            android:id="@+id/loadedMadameImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
     <com.sayler.bonjourmadame.widget.CircularReveal
             android:id="@+id/circural_reveal"
             android:layout_width="match_parent"
