--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:Circle="http://schemas.android.com/apk/res-auto"
+             xmlns:ActionButton="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/scene_base"
@@ -9,7 +10,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/abc_action_bar_default_height_material"
-            android:background="@color/amber"
+            android:background="@color/mainColor"
             android:translationZ="5dp"
             android:elevation="5dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -23,7 +24,7 @@
             android:id="@+id/circural_reveal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            Circle:barColor="@color/amberBackground"
+            Circle:barColor="@color/backgroundColor"
             />
 
     <RelativeLayout
@@ -32,39 +33,11 @@
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
             >
-        <RelativeLayout
-                android:id="@+id/button_container"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/add_button_margin"
-                android:layout_marginEnd="@dimen/add_button_margin"
-                android:clipChildren="false"
-                android:clipToPadding="false"
-                android:padding="10dp">
-            <ImageButton
-                    android:id="@+id/action_button"
-                    android:layout_centerInParent="true"
-                    android:layout_width="@dimen/diameter"
-                    android:layout_height="@dimen/diameter"
-                    android:src="@android:drawable/ic_input_add"
-                    android:tint="@android:color/white"
-                    android:background="@drawable/oval"
-                    android:elevation="@dimen/elevation_low"
-                    android:stateListAnimator="@anim/button_elevation"/>
-            <ProgressBar
-                    android:id="@+id/progress_bar_circle"
-                    android:visibility="gone"
-                    android:layout_centerInParent="true"
-                    android:layout_width="@dimen/diameter"
-                    android:layout_height="@dimen/diameter"
-                    android:elevation="@dimen/elevation_high"
-                    android:translationZ="1dp"
-                    style="@style/Base.Widget.AppCompat.ProgressBar"
-                    />
-        </RelativeLayout>
+        <com.sayler.bonjourmadame.widget.ActionButton
+                android:id="@+id/actionButton"
+                ActionButton:actionIcon="@android:drawable/ic_input_add"
+                ActionButton:actionBackground="@drawable/oval"
+                style="@style/actionButtonStyle"/>
     </RelativeLayout>
 
 </FrameLayout>
