--- a/app/src/main/res/values-v21/attr.xml
+++ b/app/src/main/res/values-v21/attr.xml
@@ -21,6 +21,9 @@
         <attr name="startLineColor" format="color"/>
     </declare-styleable>
 
-
+    <declare-styleable name="ActionButton">
+        <attr name="actionIcon" format="integer"/>
+        <attr name="actionBackground" format="integer"/>
+    </declare-styleable>
 
 </resources>
