--- a/app/src/main/res/layout/i_action_button.xml
+++ b/app/src/main/res/layout/i_action_button.xml
@@ -11,8 +11,8 @@
     <ImageButton
             android:id="@+id/action_button"
             android:layout_centerInParent="true"
-            android:layout_width="@dimen/diameter"
-            android:layout_height="@dimen/diameter"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:src="@android:drawable/ic_input_add"
             android:tint="@android:color/white"
             android:background="@drawable/oval"
@@ -22,8 +22,8 @@
             android:id="@+id/progress_bar_circle"
             android:visibility="gone"
             android:layout_centerInParent="true"
-            android:layout_width="@dimen/diameter"
-            android:layout_height="@dimen/diameter"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:elevation="@dimen/elevation_high"
             android:translationZ="1dp"
             style="@style/Base.Widget.AppCompat.ProgressBar"
