--- a/app/src/main/res/values-v21/attr.xml
+++ b/app/src/main/res/values-v21/attr.xml
@@ -24,6 +24,7 @@
     <declare-styleable name="ActionButton">
         <attr name="actionIcon" format="integer"/>
         <attr name="actionBackground" format="integer"/>
+        <attr name="diameter" format="dimension"/>
     </declare-styleable>
 
 </resources>
