NF: ActionButton tin color change, NavigationBar color change

--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -38,6 +38,7 @@
                 ActionButton:actionIcon="@android:drawable/ic_input_add"
                 ActionButton:actionBackground="@drawable/oval"
                 ActionButton:diameter="@dimen/diameter"
+                ActionButton:tint="@android:color/white"
                 style="@style/actionButtonStyle"/>
     </RelativeLayout>
 
