--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -3,18 +3,7 @@
              xmlns:ActionButton="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:id="@+id/scene_base"
-
-        >
-    <Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/abc_action_bar_default_height_material"
-            android:background="@color/mainColor"
-            android:translationZ="5dp"
-            android:elevation="5dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark">
-    </Toolbar>
+             android:id="@+id/scene_base">
     <ImageView
             android:id="@+id/loadedMadameImageView"
             android:layout_width="match_parent"
@@ -26,13 +15,11 @@
             android:layout_height="match_parent"
             Circle:barColor="@color/backgroundColor"
             />
-
     <RelativeLayout
             android:id="@+id/mainContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:animateLayoutChanges="true"
-            >
+            android:animateLayoutChanges="true">
         <com.sayler.bonjourmadame.widget.MainActionButton
                 android:id="@+id/actionButton"
                 ActionButton:actionIcon="@android:drawable/ic_input_add"
@@ -41,5 +28,4 @@
                 ActionButton:tint="@android:color/white"
                 style="@style/actionButtonStyle"/>
     </RelativeLayout>
-
 </FrameLayout>
