--- a/app/src/main/res/layout/i_action_button.xml
+++ b/app/src/main/res/layout/i_action_button.xml
@@ -3,8 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/add_button_margin"
-        android:layout_marginEnd="@dimen/add_button_margin"
+        android:layout_margin="@dimen/add_button_margin"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:padding="10dp" tools:showIn="@layout/f_loading">
