--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,14 @@
     <style name="actionButtonStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="refreshActionButtonStyle" parent="actionButtonStyle">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_centerInParent">true</item>
+    </style>
+    <style name="setWallpaperActionButtonStyle" parent="actionButtonStyle">
+        <item name="android:layout_alignParentRight">true</item>
     </style>
 </resources>
