--- a/app/src/main/res/layout/i_action_button.xml
+++ b/app/src/main/res/layout/i_action_button.xml
@@ -8,6 +8,12 @@
         android:clipToPadding="false"
         android:padding="10dp" tools:showIn="@layout/f_loading">
     <ImageButton
+            android:id="@+id/action_button_stroke"
+            android:layout_centerInParent="true"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@drawable/oval_stroke"/>
+    <ImageButton
             android:id="@+id/action_button"
             android:layout_centerInParent="true"
             android:layout_width="56dp"
