NF: action button stroke WIP

--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -41,6 +41,7 @@
                 ActionButton:diameter="@dimen/diameter"
                 ActionButton:diameterStroke="@dimen/diameterStroke"
                 ActionButton:tint="@android:color/white"
+                ActionButton:strokeColor="@android:color/white"
                 android:layout_marginBottom="-32dp"
                 android:elevation="1dp"
                 android:layout_above="@id/refreshActionButton"
@@ -53,6 +54,7 @@
                 ActionButton:diameter="@dimen/diameter"
                 ActionButton:diameterStroke="@dimen/diameterStroke"
                 ActionButton:tint="@android:color/white"
+                ActionButton:strokeColor="@android:color/white"
                 android:layout_marginBottom="-32dp"
                 android:elevation="1dp"
                 android:layout_above="@id/setWallpaperActionButton"
