--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -10,7 +10,7 @@
             android:id="@+id/loadedMadameImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"/>
+            android:background="@color/mainLight"/>
     <com.sayler.bonjourmadame.widget.CircularReveal
             android:id="@+id/circuralReveal"
             android:layout_width="match_parent"
