--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Transparent" parent="android:Theme.Material.Light">
+    <style name="Theme.Transparent" parent="Theme.AppCompat.Light">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowNoTitle">true</item>
         <item name="android:backgroundDimEnabled">false</item>
         <item name="android:colorPrimary">@android:color/white</item>
         <item name="android:colorAccent">@android:color/white</item>
         <item name="android:statusBarColor">@color/mainAccent</item>
+        <item name="android:navigationBarColor">@color/mainAccent</item>
     </style>
 
 </resources>
