--- a/app/src/main/res/layout/a_main.xml
+++ b/app/src/main/res/layout/a_main.xml
@@ -20,10 +20,12 @@
         <FrameLayout
                 android:id="@+id/container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent">
+        </FrameLayout>
 
     </FrameLayout>
     <FrameLayout
+            android:id="@+id/drawerLayout"
             android:layout_gravity="left"
             android:layout_width="320dp"
             android:layout_height="match_parent"
