--- a/app/src/main/res/values-v21/colors.xml
+++ b/app/src/main/res/values-v21/colors.xml
@@ -5,4 +5,7 @@
     <color name="mainAccent">#ffdf6700</color>
     <color name="mainLight">#FFFFE082</color>
     <color name="mainLight2">#FFFFECB3</color>
+    <color name="gray">#ffe7e7e7</color>
+    <color name="white">#ffffff</color>
+
 </resources>
