--- a/app/src/main/res/layout/f_drawer.xml
+++ b/app/src/main/res/layout/f_drawer.xml
@@ -1,18 +1,8 @@
-<LinearLayout
+<ViewStub
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    <ImageView
-            android:id="@+id/topImage"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            android:background="@color/mainAccent"/>
+        android:id="@+id/stubImport"
+        android:inflatedId="@+id/panel_import"
+        android:layout="@layout/i_drawer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
-    <ListView
-            android:id="@+id/navigationListView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:choiceMode="singleChoice"/>
-</LinearLayout>
