--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -9,8 +9,7 @@
     <ImageView
             android:id="@+id/loadedMadameImageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/mainLight"/>
+            android:layout_height="match_parent"/>
     <com.sayler.bonjourmadame.widget.CircularReveal
             android:id="@+id/circuralReveal"
             android:layout_width="match_parent"
