--- a/app/src/main/res/layout/a_main.xml
+++ b/app/src/main/res/layout/a_main.xml
@@ -2,8 +2,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/DrawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="7dp">
+        android:layout_height="match_parent">
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -32,3 +31,4 @@
             android:clickable="true"
             android:background="@android:color/white"/>
 </com.sayler.bonjourmadame.widget.HackyDrawerLayout>
+
