--- a/app/src/main/res/layout/f_loading.xml
+++ b/app/src/main/res/layout/f_loading.xml
@@ -9,7 +9,8 @@
     <ImageView
             android:id="@+id/loadedMadameImageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
     <com.sayler.bonjourmadame.widget.CircularReveal
             android:id="@+id/circuralReveal"
             android:layout_width="match_parent"
