--- a/app/src/main/res/layout/i_history_row.xml
+++ b/app/src/main/res/layout/i_history_row.xml
@@ -12,6 +12,5 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_centerInParent="true"
-            android:scaleType="centerCrop"
-            android:background="@color/white"/>
+            android:scaleType="centerCrop"/>
 </RelativeLayout>
