--- a/app/src/main/res/layout/f_history.xml
+++ b/app/src/main/res/layout/f_history.xml
@@ -12,7 +12,7 @@
 
     <android.support.v7.widget.RecyclerView
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/streams_list"
+            android:id="@+id/history_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
