--- a/app/src/main/res/layout/i_history_row.xml
+++ b/app/src/main/res/layout/i_history_row.xml
@@ -3,14 +3,12 @@
                 android:id="@+id/container"
                 android:background="?android:attr/selectableItemBackground"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+                android:layout_height="match_parent">
 
     <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="100dp"
             android:layout_centerInParent="true"
             android:scaleType="centerCrop"/>
 </RelativeLayout>
