--- a/app/src/main/res/layout/i_history_row.xml
+++ b/app/src/main/res/layout/i_history_row.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/container"
-                android:background="?android:attr/selectableItemBackground"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/container"
+             android:background="?android:attr/selectableItemBackground"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_centerInParent="true"
             android:scaleType="centerCrop"/>
-</RelativeLayout>
+    <View
+            android:duplicateParentState="true"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/row_selector"/>
+</FrameLayout>
