--- a/app/src/main/res/values-v21/attr.xml
+++ b/app/src/main/res/values-v21/attr.xml
@@ -1,24 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="CircularReveal">
-        <attr name="text" format="string"/>
-        <attr name="textColor" format="color"/>
-        <attr name="textSize" format="dimension"/>
-        <attr name="barColor" format="color"/>
-        <attr name="rimColor" format="color"/>
-        <attr name="rimWidth" format="dimension"/>
-        <attr name="spinSpeed" format="dimension"/>
-        <attr name="delayMillis" format="integer"/>
-        <attr name="circleColor" format="color"/>
-        <attr name="barWidth" format="dimension"/>
-        <attr name="barLength" format="dimension"/>
-        <attr name="contourColor" format="color"/>
-        <attr name="contourSize" format="dimension"/>
-        <attr name="dotColor" format="color"/>
-        <attr name="dotColor_120" format="color"/>
-        <attr name="dotColor_240" format="color"/>
-        <attr name="dotColor_360" format="color"/>
-        <attr name="startLineColor" format="color"/>
+        <attr name="fillColor" format="color"/>
     </declare-styleable>
 
     <declare-styleable name="ActionButton">
@@ -29,5 +12,4 @@
         <attr name="strokeColor" format="color"/>
         <attr name="tint" format="color"/>
     </declare-styleable>
-
 </resources>
