--- a/app/src/main/res/layout/i_history_row.xml
+++ b/app/src/main/res/layout/i_history_row.xml
@@ -8,9 +8,10 @@
     <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="@dimen/h_history_row"
             android:scaleType="centerCrop"/>
     <View
+            android:visibility="gone"
             android:duplicateParentState="true"
             android:layout_width="match_parent"
             android:layout_height="100dp"
