NF: History images placeholder

--- a/app/src/main/res/layout/i_history_row.xml
+++ b/app/src/main/res/layout/i_history_row.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/container"
-             android:background="?android:attr/selectableItemBackground"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/container"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+        >
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_image"
+            android:alpha="0.5"/>
     <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
@@ -16,4 +23,4 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="@drawable/row_selector"/>
-</FrameLayout>
+</RelativeLayout>
