--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Transparent" parent="Theme.AppCompat.Light">
+    <style name="Theme.Transparent" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowContentTransitions">true</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -9,11 +9,16 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:backgroundDimEnabled">false</item>
-        <item name="android:colorPrimary">@android:color/white</item>
-        <item name="android:colorAccent">@android:color/white</item>
+        <item name="colorPrimary">@color/mainLight</item>
+        <item name="colorPrimaryDark">@color/mainLight2</item>
+        <item name="colorAccent">@color/white</item>
         <item name="android:statusBarColor">@color/mainAccent</item>
         <item name="android:navigationBarColor">@color/mainAccent</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="android:windowActionModeOverlay">true</item>
+        <item name="actionModeStyle">@style/Widget.ActionMode</item>
     </style>
-
+    <style name="Widget.ActionMode" parent="@style/Widget.AppCompat.ActionMode">
+        <item name="android:background">@color/mainColor</item>
+    </style>
 </resources>
