--- a/app/src/main/res/layout/i_history_row.xml
+++ b/app/src/main/res/layout/i_history_row.xml
@@ -12,15 +12,21 @@
             android:layout_centerInParent="true"
             android:src="@drawable/ic_image"
             android:alpha="0.5"/>
-    <ImageView
-            android:id="@+id/image"
+    <RelativeLayout
+            android:id="@+id/sizeHolder"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/h_history_row"
-            android:scaleType="centerCrop"/>
-    <View
-            android:visibility="gone"
-            android:duplicateParentState="true"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@drawable/row_selector"/>
+            android:layout_height="@dimen/h_history_row">
+        <com.sayler.bonjourmadame.widget.SelectableImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"/>
+        <View
+                android:visibility="gone"
+                android:duplicateParentState="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/row_selector"/>
+    </RelativeLayout>
+
 </RelativeLayout>
