BF: new colors and launcher icon

--- a/app/src/main/res/layout/i_drawer.xml
+++ b/app/src/main/res/layout/i_drawer.xml
@@ -8,7 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:scaleType="centerCrop"
-            android:background="@color/mainAccent"/>
+            android:background="@color/colorAccent"/>
 
     <ListView
             android:id="@+id/navigationListView"
