--- a/app/src/main/res/drawable/oval_stroke.xml
+++ b/app/src/main/res/drawable/oval_stroke.xml
@@ -2,7 +2,7 @@
         android:color="?android:colorControlHighlight">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/mainLight"/>
+            <solid android:color="@color/colorAccent"/>
         </shape>
     </item>
 </ripple>
