--- a/app/src/main/res/layout/i_history_row.xml
+++ b/app/src/main/res/layout/i_history_row.xml
@@ -15,6 +15,7 @@
     <RelativeLayout
             android:id="@+id/sizeHolder"
             android:layout_width="match_parent"
+            android:background="@color/white"
             android:layout_height="@dimen/h_history_row">
         <com.sayler.bonjourmadame.widget.SelectableImageView
                 android:id="@+id/image"
